<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2014 Google Inc. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="select_an_action">Select an action&#8230;</string>
    <string name="overflow">Overflow</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="time_duration">Duration</string>
    <string name="seekbar">Seekbar</string>
    <string name="time_current">Current time</string>
    <string name="pause">Pause</string>
    <string name="logo_image">Logo image</string>
    <string name="time_separator">/</string>
    <string name="time_default">00:00</string>
    <string name="output">Qualidade</string>
    <string name="output_default">240p</string>
    <string name="captions">Legendas</string>
    <string name="caption_default">Português ( Brasil )</string>
    <string name="cancel">Cancelar</string>
</resources>
