<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2014 Google Inc. All rights reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/middle_section"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_chrome"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="16dp"
        android:background="@drawable/controls_top_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/logo_image"
                android:id="@+id/logo_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/video_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/actions_container"
                android:layout_toRightOf="@id/logo_image"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:gravity="center_vertical"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:id="@id/actions_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>
    </LinearLayout>

    <ImageButton
        android:contentDescription="@string/pause"
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_pause_large" />


    <LinearLayout
        android:id="@+id/bottom_chrome"
        android:background="@drawable/controls_bottom_background"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_margin="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            style="@style/control">

            <LinearLayout android:id="@+id/time_container"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content">

                <TextView
                    android:contentDescription="@string/time_current"
                    android:id="@+id/time_current"
                    tools:ignore="RtlHardcoded"
                    android:layout_marginLeft="15dp"
                    style="@style/time" />

                <TextView
                    android:id="@+id/time_separator"
                    android:text="@string/time_separator"
                    android:textColor="@color/text_gray"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    style="@style/time" />

                <TextView
                    android:contentDescription="@string/time_duration"
                    android:id="@+id/time_duration"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/text_gray"
                    style="@style/time" />
            </LinearLayout>

            <SeekBar
                android:contentDescription="@string/seekbar"
                android:id="@+id/mediacontroller_progress"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:thumb="@drawable/thumb"
                android:progressDrawable="@drawable/seekbar_progress"
                style="@style/control" />

            <ImageButton
                android:contentDescription="@string/output"
                android:id="@+id/output_button"
                android:src="@drawable/output"
                android:background="@android:color/transparent"
                style="@style/control" />

            <ImageButton
                android:contentDescription="@string/fullscreen"
                android:id="@+id/fullscreen"
                android:src="@drawable/fullscreen"
                android:background="@android:color/transparent"
                style="@style/control" />
        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/output_menu_layout"
        android:id="@+id/output_menu"
        android:layout_width="200sp"
        android:layout_height="100sp"
        android:layout_gravity="center" />

</FrameLayout>
